--- a/views/home.html
+++ b/views/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/styles.css">
     <title>Pair Program Appointment Scheduler</title>
 </head>
 <body>
@@ -11,9 +12,16 @@
     <label for="fname">First name:</label>
     <input type="text" id="fname" name="fname">
 
-    <label for="fname">Last name:</label>
+    <label for="lname">Last name:</label>
     <input type="text" id="lname" name="lname">
 
+    <label for="date">Date:</label>
+    <input type="date" id="date" name="date">
+
+    <label for="time">Time:</label>
+    <input type="time" id="time" name="time">
+
+    <button type="button">submit</button>
     
 </body>
 </html>
